--- a/templates/login.html
+++ b/templates/login.html
@@ -46,7 +46,7 @@
             </div>
 
                 {{ form.submit(class_="btn btn-success") }}
-            <a href="/registration" class="btn-link">Sign up</a>
+            <a href="/registration" class="btn-link">Sign Up</a>
             </form>
         </div>
         <!--/card-block-->
